Remove horizontal scrollbar and fix search results width

--- a/resources/styles/search.less
+++ b/resources/styles/search.less
@@ -26,6 +26,7 @@
 }
 
 .search-results {
+    box-sizing: border-box;
     background: @bg-search;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
