--- a/resources/styles/utilities.less
+++ b/resources/styles/utilities.less
@@ -62,6 +62,16 @@ a.credits-link:hover {
     }
 }
 
+.fork-us-wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: -100;
+    overflow: hidden;
+}
+
 .fork-us {
     background: @md-blue-grey-700;
     color: @md-grey-200;
